--- a/vocabulary.html
+++ b/vocabulary.html
@@ -55,7 +55,52 @@
 </h1>
 <h1>Name server: A computer dedicated to providing responses to requests for Domain Name information.
 </h1>
-<h1>hi</h1>
+<h1>browser tab: A separate viewing pane within a browser window, many of which may be open at once, allowing a user to switch quickly between web pages.
+</h1>
+<h1>browser tab- A separate viewing pane within a browser window, many of which may be open at once, allowing a user to switch quickly between web pages.
+</h1>
+<h1>Browser tab: A separate viewing pane within a browser window, many of which may be open at once, allowing a user to switch quickly between web pages.
+</h1>
+<h1>Bookmark: A piece of data used by a browser to allow the user to return quickly to a previously visited site.
+</h1>
+<h1>History: Information stored by a browser about the web resources that it has requested.
+</h1>
+<h1>Browser: A piece of software that renders web pages and allows users to view resources on a network.
+</h1>
+<h1>Client application: A program that makes use of another piece of software or set of data; for web interactions, the web browser is usually the client application.
+</h1>
+<h1>Client machine: A machine running a client application.
+</h1>
+<h1>TCP/IP: The dominant set of protocols for the transfer of data over the Internet.
+</h1>
+<h1>Redundancy: The property of having many resources or components which all serve identical purposes.
+</h1>
+<h1>YRL: Uniform Resource Locators are strings of characters that contain information about how to access a resource over the Internet.
+</h1>
+<h1>Parameter: A value used in a model.
+</h1>
+<h1>Port:A subset of network traffic received at an IP address, specified by a port number. Traffic at any particular port number is usually listened to by a particular type of application or process that is being accessed on a server.
+</h1>
+<h1>Filter: A program or device that allows or passes some packets through while blocking others based on predetermined criteria.
+</h1>
+<h1>Cookie: A small piece of data stored on the client machine that can only be accessed by the server that issued it.
+</h1>
+<h1>Add-on: A piece of software designed to enhance the capabilities of another piece of software.
+</h1>
+<h1>Third party cookies: A cookie that is stored on a client computer by a domain other than the one that is currently requesting resources.
+</h1>
+<h1>HTML: HyperText Markup Language is the most common language used for creating web pages.
+</h1>
+<h1>CSS: Cascading Style Sheets contain hierarchical information about how the content of a web page will be rendered in a browser.
+</h1>
+<h1>Javascript: Cascading Style Sheets contain hierarchical information about how the content of a web page will be rendered in a browser.
+</h1>
+<h1>Web crawler: A softbot responsible for following hyperlinks throughout the Internet to provide information for the creation of a web index.
+</h1>
+<h1>Web crawler: A softbot responsible for following hyperlinks throughout the Internet to provide information for the creation of a web index.
+</h1>
+<h1>Query: A database that stores information about web content.
+</h1>
     <br>
 	  </body>
 	</html>
